# STARQ-ROS2

./: README.md  boom.launch  install_deps.sh
boom_encoders/: package.xml  setup.py
boom_encoders/boom_encoders/: boom_encoders_node.py
boom_encoders/launch/: boom_encoders.xml
boom_rpi/: README.md  boom_install.sh  startup.service  startup.sh
docker/: Dockerfile  run_docker.sh
gait_publisher/: CMakeLists.txt  package.xml
gait_publisher/config/: boom-gaits.yaml  gaits.yaml
gait_publisher/gaits/: hop-test.csv  jump-test.csv  square-test.csv  square.csv  swimtest-7pt.csv  zero.csv
gait_publisher/launch/: gait_publisher.xml
gait_publisher/src/: gait_publisher_node.cpp
inverse_kinematics/: CMakeLists.txt  package.xml
inverse_kinematics/config/: legs.yaml
inverse_kinematics/launch/: inverse_kinematics.xml
inverse_kinematics/src/: inverse_kinematics_node.cpp
leg_kinematics/: CMakeLists.txt  package.xml
leg_kinematics/config/: boom.yaml  etquad.yaml  legs.yaml
leg_kinematics/include/leg_kinematics/: KinematicModel.hpp  LegKinematicsNode.hpp  types.hpp
leg_kinematics/include/leg_kinematics/models/: FiveBar2D.hpp
leg_kinematics/launch/: leg_kinematics.xml
leg_kinematics/src/: leg_kinematics_node.cpp
matlab/: BoomController.m  SLIP_gait.m  log_data.m  square_gait.asv  square_gait.m
matlab/convert/: WalkGait2FootSpace.csv  WalkGaitFootSpace.csv  convert.m  sevenPtTrajSwim1MotorSpace.csv  sevenPtTrajikFootSpace.csv  walktest1-7pt.csv  walktest2-7pt.csv
matlab/hopping/: hop-test.csv  hop_maker.asv  hop_maker.m  jump-test.csv
motor_driver/: README.md  package.xml  setup.py
motor_driver/config/: boom.yaml  etquad.yaml  motors.yaml
trajectory_planner/: CMakeLists.txt  package.xml
(+24 files in other folders)
